--- a/index.html
+++ b/index.html
@@ -21,7 +21,50 @@
       <a href="contact.html">Contact</a>
     </div>
   </header>
-  <main></main>
+  <main>
+    <aside class="aside-1">
+      <h2>Menu</h2>
+      <ul>
+        <li>Item 1</li>
+        <li>Item 2</li>
+        <li>Item 3</li>
+      </ul>
+    </aside>
+    <section>
+      <h1>Landing Page(GridFlex)</h1>
+      <article>
+        <p>Hier vertellen wat er nu speelt/veranderd is.</p>
+        <p>
+          House hen chinchillas in barn livestock cat hogs
+          chicks trucks. Blue berries pigeons buzz and bean
+          prairie dogs nails at est. Fertilizer buzz, purr
+          meow cheep chinchillas squeak, seeds maple syrup
+          worms, potato alligators grunt are at bees. Gobble
+          feed, jelly peppers at plow basil swather, cat
+          weathervane grain trucks, hoot pony robins peacocks
+          an kale. In eggplant, quonset is grain bins,
+          grain truck.
+        </p>
+      </article>
+    </section>
+    <aside class="aside-2">
+      <h2>Geleerd</h2>
+      <dl>
+        <dt><strong>box-shadow</strong></dt>
+        <dd><i>box-shadow: none|h-offset v-offset blur spread color |inset|initial|inherit;</i></dd>
+        <dt><strong>description-list</strong></dt>
+        <dd>
+          <i>
+            &lt;dl&gt; tag defineert een description lijst.<br>
+            &lt;dt&gt; tag defineert een term/name in een description lijst.<br>
+            &lt;dd&gt; tag wordt gebruikt om een beschrijving te geven van een term/name in een description lijst.
+          </i>
+        </dd>
+        <dt>Event 1</dt>
+        <dd>Event 2</dd>
+      </dl>
+    </aside>
+  </main>
   <footer>
     <div>© 2024 Portfolio</div>
     <div class="breadcrums">Homepage</div>
